-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17, 21, 22
-
Component/s: hotspot
-
b10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8313959 | 21.0.1 | Tobias Hartmann | P3 | Resolved | Fixed | b08 |
| JDK-8313750 | 17.0.10-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8316368 | 17.0.10 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
#
# Internal Error (/oracle/jdk/open/src/hotspot/share/ci/ciInstance.cpp:111), pid=2038524, tid=2038540
# assert(field->is_static() || klass()->is_subclass_of(field->holder())) failed: invalid access - must be subclass
#
# JRE version: Java(TM) SE Runtime Environment (22.0) (fastdebug build 22-internal-2023-07-05-0633347.tobias...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 22-internal-2023-07-05-0633347.tobias..., compiled mode, emulated-client, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x8dad95] ciInstance::field_value(ciField*)+0x1e5
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
Current CompileTask:
C1: 505 28 b 1 TestInvokeinterfaceWithBadReceiverHelper::test (8 bytes)
Stack: [0x00007f5f240d2000,0x00007f5f241d3000], sp=0x00007f5f241d0660, free space=1017k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x8dad95] ciInstance::field_value(ciField*)+0x1e5 (ciInstance.cpp:111)
V [libjvm.so+0x8d5bad] ciField::constant_value_of(ciObject*)+0x2d (ciField.cpp:329)
V [libjvm.so+0x74e081] GraphBuilder::access_field(Bytecodes::Code)+0x5a1 (c1_GraphBuilder.cpp:1797)
V [libjvm.so+0x75294b] GraphBuilder::iterate_bytecodes_for_block(int)+0x5bb (c1_GraphBuilder.cpp:2958)
V [libjvm.so+0x75466d] GraphBuilder::iterate_all_blocks(bool)+0x9d (c1_GraphBuilder.cpp:3031)
V [libjvm.so+0x7507ff] GraphBuilder::try_inline_full(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0xb2f (c1_GraphBuilder.cpp:4080)
V [libjvm.so+0x751042] GraphBuilder::try_inline(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x172 (c1_GraphBuilder.cpp:3556)
V [libjvm.so+0x7514d7] GraphBuilder::invoke(Bytecodes::Code)+0x327 (c1_GraphBuilder.cpp:2138)
V [libjvm.so+0x75293b] GraphBuilder::iterate_bytecodes_for_block(int)+0x5ab (c1_GraphBuilder.cpp:2963)
V [libjvm.so+0x75465b] GraphBuilder::iterate_all_blocks(bool)+0x8b (c1_GraphBuilder.cpp:3046)
V [libjvm.so+0x755b6e] GraphBuilder::GraphBuilder(Compilation*, IRScope*)+0x59e (c1_GraphBuilder.cpp:3415)
V [libjvm.so+0x764b0c] IRScope::IRScope(Compilation*, IRScope*, int, ciMethod*, int, bool)+0x35c (c1_IR.cpp:128)
V [libjvm.so+0x764ce8] IR::IR(Compilation*, ciMethod*, int)+0xa8 (c1_IR.cpp:273)
V [libjvm.so+0x72f911] Compilation::build_hir() [clone .part.0]+0x1b1 (c1_Compilation.cpp:153)
V [libjvm.so+0x7319f1] Compilation::compile_java_method()+0x501 (c1_Compilation.cpp:141)
V [libjvm.so+0x732139] Compilation::compile_method()+0x179 (c1_Compilation.cpp:473)
V [libjvm.so+0x7328c0] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x2f0 (c1_Compilation.cpp:600)
V [libjvm.so+0x73432e] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0xde (c1_Compiler.cpp:254)
V [libjvm.so+0xa003e0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa00 (compileBroker.cpp:2265)
V [libjvm.so+0xa01268] CompileBroker::compiler_thread_loop()+0x618 (compileBroker.cpp:1944)
V [libjvm.so+0xeb38ac] JavaThread::thread_main_inner()+0xcc (javaThread.cpp:719)
V [libjvm.so+0x178c04a] Thread::call_run()+0xba (thread.cpp:217)
V [libjvm.so+0x148d3dc] thread_native_entry(Thread*)+0x11c (os_linux.cpp:778)
- backported by
-
JDK-8313750 C1 should not inline through interface calls with non-subtype receiver
-
- Resolved
-
-
JDK-8313959 C1 should not inline through interface calls with non-subtype receiver
-
- Resolved
-
-
JDK-8316368 C1 should not inline through interface calls with non-subtype receiver
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/fee0229a
-
Commit
openjdk/jdk21u/7350b3f5
-
Commit
openjdk/jdk/ab1c212a
-
Review
openjdk/jdk17u-dev/1736
-
Review
openjdk/jdk21u/40
-
Review
openjdk/jdk/15018