8312909: C1 should not inline through interface calls with non-subtype receiver

Reviewed-by: phh
Backport-of: ab1c212ac1097ae6e1122ef1aba47ca51eca11f2